fix(folio): persist SKU diagnostics and safely recover lock conflicts
Add confirmed-rollback lock retry contract and durable V14 SKU diagnostics. Include verified SAFE arithmetic correction, laboratory probes, and separate network transport stock from supplier transit.